--- a/models/nr_datatypes_2.0.yaml
+++ b/models/nr_datatypes_2.0.yaml
@@ -21,14 +21,26 @@ NRPerson:
         faker: name
     givenName:
       type: keyword
+      label.cs: Jméno
+      label.en: Name
+      hint.cs: Napište jméno autora.
+      hint.en: Write the author's name.
     familyName:
+      label.cs: Příjmení
+      label.en: Last name
+      hint.cs: Napište příjmení autora.
+      hint.en: Write the author's last name.
       type: keyword
     authorityIdentifiers[]:
-      use: 'nr-datatypes#NRPersonIdentifier'
+      use: "nr-datatypes#NRPersonIdentifier"
+      ^label.cs: Identifikátor osoby
+      ^label.en: Person identifier
+      ^help.cs: Vyberte z nabídky typ identifikátoru. Napište identifikátor bez předpony (tj. https://orcid.org/0009-0004-8646-7185 nebo jk01051816).
+      ^help.en: Choose the identifier type from the menu. Write the identifier without a prefix (e.g. https://orcid.org/0009-0004-8646-7185 or jk01051816).
     affiliations[]:
       type: taxonomy
       vocabulary-type: institutions
-      keys: [ id, title, props.ror ]
+      keys: [id, title, props.ror]
       ui:
         marshmallow:
           class: nr_metadata.common.services.records.ui_schema_datatypes.NRAffiliationVocabularyUISchema
@@ -40,7 +52,8 @@ NRPerson:
       #^uniqueItems: true
       label.cs: Afiliace
       label.en: Affiliation
-      hint.cs: Uveďte instituci/instituce, pod jejíž záštitou jste se na tvorbě objektu podíleli.
+      hint.cs: Začněte zapisovat název instituce, následně zvolte instituci z nabídky našeptavače.
+      hint.en: Start typing the name of the institution, then select the institution from the menu.
   ui:
     detail: nr_person
     marshmallow:
@@ -48,15 +61,14 @@ NRPerson:
   marshmallow:
     class: nr_metadata.common.services.records.schema_datatypes.NRPersonSchema
 
-
 NROrganization:
   $id: NROrganization
   properties:
     nameType:
       type: keyword
-      enum: 
+      enum:
         - Organizational
-      sample: 
+      sample:
         - Organizational
       label.cs: Typ
       label.en: Type
@@ -65,10 +77,12 @@ NROrganization:
       required: true
       label.cs: Jméno autora
       label.en: Author name
+      hint.cs: Začněte zapisovat název instituce, následně zvolte instituci z nabídky našeptavače.
+      hint.en: Start typing the name of the institution, then select the institution from the menu.
       sample:
         faker: name
     authorityIdentifiers[]:
-      use: 'nr-datatypes#NROrganizationIdentifier'
+      use: "nr-datatypes#NROrganizationIdentifier"
       #^uniqueItems: true
   ui:
     detail: nr_organization
@@ -88,6 +102,9 @@ NRPersonIdentifier:
       i18n.key: identifier
       label.cs: Identifikátor
       label.en: Identifier
+      hint.cs: např https://orcid.org/0009-0004-8646-7185 pro ORCID.
+      hint.en: e.g. https://orcid.org/0009-0004-8646-7185 for ORCID.
+
     scheme:
       type: keyword
       required: true
@@ -99,11 +116,13 @@ NRPersonIdentifier:
           czenasAutID,
           vedidk,
           institutionalID,
-          ISNI
+          ISNI,
         ]
       i18n.key: identifier_type
       label.cs: Typ identifikátoru
       label.en: Identifier type
+      hint.cs: Identifikátor osoby.
+      hint.en: Person identifier.
       hint.cs: |
         Doporučujeme zadat alespoň jeden z typů identifikátorů.
         Pokud potřebujete rozšířit nabídku typů identifikátorů, kontaktujte nás na support@narodni-repozitar.cz.
@@ -133,13 +152,7 @@ NROrganizationIdentifier:
     scheme:
       type: keyword
       required: true
-      enum:
-        [
-          ISNI,
-          ROR,
-          ICO,
-          DOI
-        ]
+      enum: [ISNI, ROR, ICO, DOI]
       i18n.key: identifier_type
       label.cs: Typ identifikátoru
       label.en: Identifier type
@@ -162,9 +175,9 @@ NRAuthority:
   $id: NRAuthority
   schemas:
     Personal:
-      use: 'nr-datatypes#NRPerson'
+      use: "nr-datatypes#NRPerson"
     Organizational:
-      use: 'nr-datatypes#NROrganization'
+      use: "nr-datatypes#NROrganization"
   type: polymorphic
   discriminator: nameType
   hint.cs: Jako tvůrce je možné označit osobu nebo instituci.
@@ -178,7 +191,7 @@ NRAuthority:
 
 NRCreator:
   $id: NRCreator
-  use: 'nr-datatypes#NRAuthority'
+  use: "nr-datatypes#NRAuthority"
   marshmallow:
     class: nr_metadata.common.services.records.schema_datatypes.NRCreatorSchema
   ui:
@@ -188,7 +201,7 @@ NRCreator:
 
 NRContributor:
   $id: NRContributor
-  use: 'nr-datatypes#NRAuthority'
+  use: "nr-datatypes#NRAuthority"
   schemas:
     Personal:
       ui:
@@ -199,11 +212,22 @@ NRContributor:
         class: nr_metadata.common.services.records.schema_datatypes.NRContributorPersonSchema
       properties:
         contributorType:
-          use: 'nr-datatypes#NRContributorType'
+          use: "nr-datatypes#NRContributorType"
         fullName:
           type: keyword
           label.cs: Jméno přispěvatele
           label.en: Contributor name
+        givenName:
+          type: keyword
+          label.cs: Jméno
+          label.en: Name
+          hint.cs: Napište jméno přispěvatele.
+          hint.en: Write the contributor's name.
+        familyName:
+          label.cs: Příjmení
+          label.en: Last name
+          hint.cs: Napište příjmení přispěvatele.
+          hint.en: Write the contributor's last name.
     Organizational:
       ui:
         detail: nr_contributor_organization
@@ -213,7 +237,7 @@ NRContributor:
         class: nr_metadata.common.services.records.schema_datatypes.NRContributorOrganizationSchema
       properties:
         contributorType:
-          use: 'nr-datatypes#NRContributorType'
+          use: "nr-datatypes#NRContributorType"
         fullName:
           type: keyword
           label.cs: Jméno přispěvatele
@@ -225,7 +249,6 @@ NRContributor:
       class: nr_metadata.common.services.records.ui_schema_datatypes.NRContributorUISchema
   marshmallow:
     class: nr_metadata.common.services.records.schema_datatypes.NRContributorSchema
-
 
 NRObjectPID:
   $id: NRObjectPID
@@ -239,12 +262,16 @@ NRObjectPID:
         faker: isbn13
       label.cs: Identifikátor objektu
       label.en: Object identifier
+      hint.cs: např. 10.1086/679716 pro DOI.
+      hint.en: e.g. 10.1086/679716 for DOI.
     scheme:
       type: keyword
       required: true
       enum: [DOI, Handle, ISBN, ISSN, RIV, IGSN]
       label.cs: Typ identifikátoru
       label.en: Identifier type
+      hint.cs: např. DOI, HANDLE nebo ISBN.
+      hint.en: e.g. DOI, HANDLE or ISBN.
   ui:
     detail: nr_object_pid
     marshmallow:
@@ -270,10 +297,12 @@ NRLocation:
     place:
       type: keyword
       required: true
-      label.cs: Místo
-      label.en: Place
+      label.cs: Místo konání akce
+      label.en: Event location
+      hint.cs: Zapište místo konání akce (město).
+      hint.en: Write the location of the event (city).
     country:
-      use: 'nr-datatypes#NRCountry'
+      use: "nr-datatypes#NRCountry"
   ui:
     detail: location
     marshmallow:
@@ -287,6 +316,8 @@ NRCountry:
   vocabulary-type: countries
   label.cs: Země
   label.en: Country
+  hint.cs: Zvolte stát z nabídky.
+  hint.en: Choose a country from the menu.
   ui:
     marshmallow:
       class: nr_metadata.common.services.records.ui_schema_datatypes.NRCountryVocabularyUISchema
@@ -315,6 +346,8 @@ NRContributorType:
   vocabulary-type: contributor-types
   label.cs: Typ přispěvatele
   label.en: Contributor's type
+  hint.cs: Vyberte z rolety roli přispěvatele (editor, ilustrátor…).
+  hint.en: Choose the role of the contributor (editor, illustrator…).
   ui:
     marshmallow:
       class: nr_metadata.common.services.records.ui_schema_datatypes.NRContributorTypeVocabularyUISchema
@@ -323,8 +356,8 @@ NRContributorType:
 
 NRRelatedItem:
   $id: NRRelatedItem
-  label.cs: 'Vazba na/z dalších zdrojů:'
-  label.en: 'Link to/from other resources:'
+  label.cs: "Vazba na/z dalších zdrojů:"
+  label.en: "Link to/from other resources:"
   description: linkdata, propojení přidružených dokumentů a datasetů.
   ui:
     detail: related_item
@@ -334,9 +367,10 @@ NRRelatedItem:
     class: nr_metadata.common.services.records.schema_datatypes.NRRelatedItemSchema
   properties:
     itemTitle:
-      description: název propojeného dokumentu
       label.cs: Název
       label.en: Title
+      hint.cs: Název propojeného dokumentu.
+      hint.en: Title of the linked document.
       type: fulltext
       required: true
 
@@ -344,7 +378,7 @@ NRRelatedItem:
       #^uniqueItems: true
       ^label.cs: Autoři
       ^label.en: Authors
-      use: 'nr-datatypes#NRAuthority'
+      use: "nr-datatypes#NRAuthority"
       ui:
         detail: creator
         marshmallow:
@@ -357,7 +391,7 @@ NRRelatedItem:
       ^label.cs: Přispěvatelé
       ^label.en: Contributors
 
-      use: 'nr-datatypes#NRAuthority'
+      use: "nr-datatypes#NRAuthority"
       ui:
         detail: contributor
         marshmallow:
@@ -374,7 +408,7 @@ NRRelatedItem:
             class: nr_metadata.common.services.records.schema_datatypes.NRRelatedItemContributorPersonSchema
           properties:
             contributorType:
-              use: 'nr-datatypes#NRContributorType'
+              use: "nr-datatypes#NRContributorType"
         Organizational:
           ui:
             detail: nr_contributor_organization
@@ -384,10 +418,12 @@ NRRelatedItem:
             class: nr_metadata.common.services.records.schema_datatypes.NRRelatedItemContributorOrganizationSchema
           properties:
             contributorType:
-              use: 'nr-datatypes#NRContributorType'
+              use: "nr-datatypes#NRContributorType"
 
     itemPIDs[]:
-      use: 'nr-datatypes#NRObjectPID'
+      use: "nr-datatypes#NRObjectPID"
+      ^help.cs: Trvalé identifikátory objektu jako ISBN, DOI atd.
+      ^help.en: Permanent object identifiers such as ISBN, DOI, etc.
       #^uniqueItems: true
 
     itemURL:
@@ -433,6 +469,8 @@ NRRelatedItem:
       vocabulary-type: item-relation-types
       label.cs: Typ vazby
       label.en: Relation type
+      hint.cs: Vyberte typ vazby.
+      hint.en: Choose the relation type.
       ui:
         marshmallow:
           class: nr_metadata.common.services.records.ui_schema_datatypes.NRItemRelationTypeVocabularyUISchema
@@ -440,15 +478,16 @@ NRRelatedItem:
         class: nr_metadata.common.services.records.schema_datatypes.NRItemRelationTypeVocabularySchema
 
     itemResourceType:
-      use: 'nr-datatypes#NRResourceType'
+      use: "nr-datatypes#NRResourceType"
 
 NRResourceType:
   $id: NRResourceType
   type: vocabulary
   vocabulary-type: resource-types
-  sample: ['Bakalářská práce', 'Diplomová práce', 'Dataset']
+  sample: ["Bakalářská práce", "Diplomová práce", "Dataset"]
   label.cs: Typ zdroje
   label.en: Resource type
+
   ui:
     marshmallow:
       class: nr_metadata.common.services.records.ui_schema_datatypes.NRResourceTypeVocabularyUISchema
@@ -457,8 +496,8 @@ NRResourceType:
 
 NRFundingReference:
   $id: NRFundingReference
-  label.cs: 'Projekt nebo financování'
-  label.en: 'Funding'
+  label.cs: "Projekt nebo financování"
+  label.en: "Funding"
   # informace o přidruženém projektu
   #
   # MIGRACE NUŠL - protože v datech NUŠL hrozný stav v polích pro poskytovatele.
@@ -476,16 +515,22 @@ NRFundingReference:
       required: true
       label.cs: Číslo projektu
       label.en: Project identifier
+      hint.cs: Zapište kód projektu.
+      hint.en: Write the project code.
     projectName:
       type: fulltext
       label.cs: Název projektu
       label.en: Project name
+      hint.cs: Zapište název projektu.
+      hint.en: Write the project name.
     fundingProgram:
       type: fulltext
       label.cs: Výzkumný program
       label.en: Funding program
+      hint.cs: Zapište název výzkumného programu, v rámci kterého byl projekt financován.
+      hint.en: Write the name of the research program under which the project was funded.
     funder:
-      use: 'nr-datatypes#NRFunder'
+      use: "nr-datatypes#NRFunder"
 
 NRSubject:
   $id: NRSubject
@@ -502,7 +547,7 @@ NRSubject:
       type: keyword
       label.cs: Schema klíčového slova
       label.en: Subject scheme
-      sample: ['keyword', 'czenas', 'psh']
+      sample: ["keyword", "czenas", "psh"]
     subject:
       type: multilingual
       required: true
@@ -539,6 +584,8 @@ NRFunder:
   vocabulary-type: funders
   label.cs: Poskytovatel financí
   label.en: Funder
+  hint.cs: Začněte zapisovat název poskytovatele, následně vyberte z nabídky našeptavače.
+  hint.en: Start typing the name of the funder, then select the funder from the menu.
   ui:
     marshmallow:
       class: nr_metadata.common.services.records.ui_schema_datatypes.NRFunderVocabularyUISchema
@@ -562,10 +609,10 @@ NRGeoLocation:
     geoLocationPoint:
       properties:
         pointLongitude:
-          use: 'nr-datatypes#NRLongitude'
+          use: "nr-datatypes#NRLongitude"
           required: true
         pointLatitude:
-          use: 'nr-datatypes#NRLatitude'
+          use: "nr-datatypes#NRLatitude"
           required: true
       ui:
         detail: geolocation_point
@@ -616,31 +663,41 @@ NREvent:
       required: true
       label.cs: Název akce
       label.en: Event name
+      hint.cs: Zapište hlavní název akce.
+      hint.en: Write the main name of the event.
 
     eventNameAlternate[]:
       # zkrácená forma názvu akce nebo překladu. měla by fungovat jako alias pro vyhledávání
       type: fulltext
       label.cs: Alternativní název akce
       label.en: Event alternate name
+      help.cs: Pokud má akce další známe názvy, uveďte je zde.
+      help.en: If the event has other known names, list them here.
 
     eventDate:
       # rozsah konání akce/konference -  date or range.
-      use: 'nr-datatypes#NRDateOrRange'
+      use: "nr-datatypes#NRDateOrRange"
       required: true
       label.cs: Datum konání akce
       label.en: Event date
+      hint.cs: Vyberte časové období (Od - Do).
+      hint.en: Choose the time period (From - To).
+      help.cs: Vyberte časový interval, ve kterém se událost odehrála.
+      help.en: Choose the time interval in which the event took place.
 
     eventLocation:
-      use: 'nr-datatypes#NRLocation'
+      use: "nr-datatypes#NRLocation"
       required: true
 
 NRLanguage:
   $id: NRLanguage
   type: vocabulary
   vocabulary-type: languages
-  sample: ['cs', 'en', 'de', 'fr', 'it']
+  sample: ["cs", "en", "de", "fr", "it"]
   label.cs: Jazyk
   label.en: Language
+  hint.cs: Vyberte jazyk/jazyky zdroje.
+  hint.en: Choose the language(s) of the resource.
   ui:
     marshmallow:
       class: nr_metadata.common.services.records.ui_schema_datatypes.NRLanguageVocabularyUISchema
@@ -653,14 +710,16 @@ NRRights:
   type: vocabulary
   vocabulary-type: rights
   sample:
-    - 'CC BY'
-    - 'CC BY-SA'
-    - 'CC BY-NC'
-    - 'CC BY-ND'
-    - 'CC BY-NC-SA'
-    - 'CC BY-NC-ND'
+    - "CC BY"
+    - "CC BY-SA"
+    - "CC BY-NC"
+    - "CC BY-ND"
+    - "CC BY-NC-SA"
+    - "CC BY-NC-ND"
   label.cs: Práva/Licence
   label.en: Rights/Licenses
+  help.cs: Pokud se k datové sadě váže licence Creative Commons, vyberte příslušnou variantu licence z nabídky. Doporučujeme výběr nejnovějších verzí a to 3.0 Česko a 4.0 International.
+  help.en: If a Creative Commons license is associated with the resource, select the appropriate license option from the menu. We recommend choosing the latest versions, namely 3.0 Czech and 4.0 International.
   ui:
     marshmallow:
       class: nr_metadata.common.services.records.ui_schema_datatypes.NRRightsVocabularyUISchema
@@ -671,9 +730,11 @@ NRAccessRights:
   $id: NRAccessRights
   type: vocabulary
   vocabulary-type: access-rights
-  sample: [open, embargoed, restricted, 'metadata only']
+  sample: [open, embargoed, restricted, "metadata only"]
   label.cs: Přístupová práva
   label.en: Access rights
+  hint.cs: Vyberte typ přístupu, zda bude zdroj dostupný otevřeně nebo s omezením.
+  hint.en: Choose access type - if the resource is open or has some restrictions.
   ui:
     marshmallow:
       class: nr_metadata.common.services.records.ui_schema_datatypes.NRAccessRightsVocabularyUISchema
@@ -697,13 +758,13 @@ NRSeries:
       type: keyword
       required: true
       # našeptávač již uložených hodnot
-      sample: ['series A', 'series B', 'series C']
+      sample: ["series A", "series B", "series C"]
       label.cs: Název edice
       label.en: Series title
 
     seriesVolume:
       type: keyword
-      sample: ['1', '2', '3', '4']
+      sample: ["1", "2", "3", "4"]
       label.cs: Svazek edice
       label.en: Series volume
 
