--- a/models/nr_common_metadata_2.0.yaml
+++ b/models/nr_common_metadata_2.0.yaml
@@ -160,7 +160,7 @@ CommonMetadata:
       ^label.cs: "Vazba na/z dalších zdrojů:"
       ^label.en: "Link to/from other resources:"
       ^help.cs: Zapište informace o zdroji, který souvisí se zdrojem, který zde popisujete (např. pokud popisujete článek, sem můžete identifikovat časopis, ve kterém článek vyšel).
-.     ^help.en: Write down information about the resource related to the one you are describing here (e.g. if you are describing an article, you can identify the journal in which the article was published).
+      ^help.en: Write down information about the resource related to the one you are describing here (e.g. if you are describing an article, you can identify the journal in which the article was published).
 
     fundingReferences[]:
       use: "nr-datatypes#NRFundingReference"
