changes per comments from ntk

--- a/models/nr_common_metadata_2.0.yaml
+++ b/models/nr_common_metadata_2.0.yaml
@@ -235,7 +235,7 @@ CommonMetadata:
     events[]:
       #^uniqueItems: true
       use: "nr-datatypes#NREvent"
-      ^label.cs: Události
+      ^label.cs: Související akce
       ^label.en: Events
 
 CommonModel:
