--- a/models/nr_datatypes_2.0.yaml
+++ b/models/nr_datatypes_2.0.yaml
@@ -275,8 +275,11 @@ NRObjectPID:
       class: nr_metadata.ui_schema.identifiers.NRObjectIdentifierUISchema
       generate: false
   marshmallow:
+    imports:
+      - import: oarepo_runtime.services.schema.validation.validate_identifier
     class: nr_metadata.schema.identifiers.NRObjectIdentifierSchema
     generate: false
+    validators: [ 'lambda value: validate_identifier(value)' ]
 
 NRDateOrRange:
   $id: NRDateOrRange
