chore(build): rebuild models

--- a/packages/nr-metadata/setup.cfg
+++ b/packages/nr-metadata/setup.cfg
@@ -24,6 +24,7 @@ install_requires =
     oarepo-runtime>=1.0.0
     deepmerge>=1.1.0
     oarepo-vocabularies>=2.0.0
+    oarepo-global-search>=1.0.23
 
 python = >=3.9
 
