--- a/models/datacite_4.5.yaml
+++ b/models/datacite_4.5.yaml
@@ -17,10 +17,10 @@ DataCiteMetadata:
       label.cs: URL
       label.en: URL
 
-    types[]:
+    resourceType:
       use: "datacite-datatypes#ResourceType"
-      ^label.cs: Typy zdroje
-      ^label.en: Resource types
+      label.cs: Typ zdroje
+      label.en: Resource type
 
     creators[]:
       "use": "datacite-datatypes#Creator"
@@ -77,7 +77,6 @@ DataCiteMetadata:
       ^label.cs: Související položky
       ^label.en: Related items
 
-
     sizes[]:
       type: keyword
       ^label.cs: Velikosti
@@ -123,8 +122,6 @@ DataCiteMetadata:
       label.cs: Kontejner
       label.en: Container
 
-
-
 DataCiteModel:
   $id: DataCiteModel
   marshmallow:
@@ -136,4 +133,4 @@ DataCiteModel:
 
   properties:
     metadata:
-      use: ['datacite#DataCiteMetadata']
+      use: ["datacite#DataCiteMetadata"]
