feat: Organizations facet
Facet merging organizations from different sources inside metadata

--- a/models/nr_documents_2.0.yaml
+++ b/models/nr_documents_2.0.yaml
@@ -97,22 +97,23 @@ DocumentModel:
             map=lambda x: x.get("fullName"),
             key="syntheticFields.people",
         )
+
       organizations: |
         SyntheticSystemField(
-            MultiSelector(
-                FilteredSelector(
-                    PathSelector("metadata.creators", "metadata.contributors"),
-                    filter=lambda x: x["nameType"] == "Personal",
-                    projection="affiliations",
-                ),
-                FilteredSelector(
-                    PathSelector("metadata.creators", "metadata.contributors"),
-                    filter=lambda x: x["nameType"] == "Organizational",
-                ),
-            ),
-            key="syntheticFields.organizations",
+          MultiSelector(
+              FilteredSelector(
+                  PathSelector("metadata.creators", "metadata.contributors"),
+                  filter=lambda x: x["nameType"] == "Personal",
+                  projection="affiliations.title.cs",
+              ),
+              FilteredSelector(
+                  PathSelector("metadata.creators", "metadata.contributors"),
+                  filter=lambda x: x["nameType"] == "Organizational",
+                  projection="fullName",
+              ),
+          ),
+          key="syntheticFields.organizations",
         )
-
       keywords: |
         SyntheticSystemField(
             selector=KeywordsFieldSelector("metadata.subjects.subject"),
@@ -149,11 +150,7 @@ DocumentModel:
           label.cs: Lidé
           label.en: People
         organizations:
-          type: taxonomy
-          vocabulary-type: institutions
-          marshmallow:
-            read: false
-            write: false
+          type: keyword
           label.cs: Instituce
           label.en: Institutions
         keywords:
