accessRights and funder are required

--- a/models/nr_common_metadata_2.0.yaml
+++ b/models/nr_common_metadata_2.0.yaml
@@ -157,6 +157,7 @@ CommonMetadata:
       # Taxonomy driven list of possible access to the document - open,
       # embargoed, restirected and metadata only access. Based on COAR
       # vocabulary - http://vocabularies.coar-repositories.org/documentation/access_rights/",
+      required: true
       use: "nr-datatypes#NRAccessRights"
 
     relatedItems[]:
